--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,8 @@
+/* Importar la fuente desde Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Teko', sans-serif; /* Aplica la nueva fuente */
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -38,6 +41,7 @@ body {
     margin-bottom: 20px;
     color: #00f2fe; /* Color del título */
     text-align: center; /* Centra el título */
+    font-weight: 700; /* Peso de la fuente por defecto */
 }
 
 .form-container input,
@@ -53,10 +57,18 @@ body {
     box-sizing: border-box; /* Asegura que el ancho incluya el padding y el borde */
 }
 
+/* Estilos para el texto del placeholder */
+.form-container input::placeholder {
+    color: #bbb; /* Color del placeholder */
+    font-family: 'Teko', sans-serif; /* Cambia la fuente del placeholder */
+}
+
+/* Estilo del botón */
 .form-container button {
     background-color: #4facfe; /* Color del botón */
     border: none; /* Sin borde para que coincida con los inputs */
     cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+    font-family: 'Teko', sans-serif; /* Cambia la fuente del botón */
 }
 
 .form-container button:hover {
@@ -76,4 +88,30 @@ body {
 
 .form-container a:hover {
     text-decoration: underline; /* Subrayar al pasar el mouse */
+}
+
+/* Clase personalizada para la fuente Teko con peso variable */
+.teko-300 {
+    font-family: "Teko", sans-serif;
+    font-weight: 300;
+}
+
+.teko-400 {
+    font-family: "Teko", sans-serif;
+    font-weight: 400;
+}
+
+.teko-500 {
+    font-family: "Teko", sans-serif;
+    font-weight: 500;
+}
+
+.teko-600 {
+    font-family: "Teko", sans-serif;
+    font-weight: 600;
+}
+
+.teko-700 {
+    font-family: "Teko", sans-serif;
+    font-weight: 700;
 }
