--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,7 +21,7 @@ body {
     justify-content: space-between; /* Espacio entre los formularios */
     width: 80%;
     max-width: 800px;
-    border-radius: 10px;
+    border-radius: 10px; /* Redondear el contenedor principal */
     overflow: hidden;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
@@ -35,6 +35,7 @@ body {
     flex-direction: column; /* Apila los elementos verticalmente */
     justify-content: center; /* Centra el contenido verticalmente */
     align-items: center; /* Centra el contenido horizontalmente */
+    border-radius: 10px; /* Redondear las esquinas del contenedor de formularios */
 }
 
 .form-container h1 {
