--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,4 @@
-/* Importar la fuente desde Google Fonts */
+/* Importamos la fuente desde Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
 
 body {
@@ -115,4 +115,10 @@ body {
 .teko-700 {
     font-family: "Teko", sans-serif;
     font-weight: 700;
+}
+
+.error-message {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 4px;
 }
