--- a/css/chat.css
+++ b/css/chat.css
@@ -47,7 +47,7 @@ header {
 }
 
 .search-friends {
-    width: 12%;
+    width: 22%;
     padding: 8px;
     background-color: rgba(246, 246, 246, 0.9);
     border-right: 1px solid #ddd;
@@ -86,7 +86,7 @@ header {
 }
 
 .friends-list {
-    width: 15%;
+    width: 70%;
     padding: 8px;
     background-color: rgba(255, 255, 255, 0.9);
     border-right: 1px solid #ddd;
@@ -121,7 +121,7 @@ header {
 }
 
 .chat-section {
-    width: 70%;
+    width: 100%;
     padding: 8px;
     background-color: rgba(255, 255, 255, 0.9);
     display: flex;
@@ -173,10 +173,6 @@ header {
     padding: 10px; /* Espaciado interno */
     background-color: #f1f1f1; /* Color de fondo para el formulario */
     border-top: 1px solid #e0e0e0; /* Borde superior para separación */
-    position: absolute; /* Cambiar a posición absoluta */
-    bottom: 0; /* Alinear al fondo */
-    left: 0; /* Alinear a la izquierda */
-    right: 0; /* Alinear a la derecha */
 }
 
 .message-form textarea {
@@ -186,7 +182,7 @@ header {
     border-radius: 5px; /* Bordes redondeados */
     border: 1px solid #ccc; /* Borde de la caja de texto */
     resize: none; /* Impide cambiar el tamaño del textarea */
-    max-height: 100px; /* Altura máxima para el textarea */
+    max-height: 60px; /* Altura máxima para el textarea ajustada */
     box-sizing: border-box; /* Asegura que el padding no afecte el ancho */
 }
 
@@ -197,8 +193,17 @@ header {
     background-color: #007bff; /* Color de fondo */
     color: white; /* Color del texto */
     cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+    height: 100%; /* Asegura que el botón tenga la misma altura que el textarea */
 }
 
 .message-form button:hover {
     background-color: #0056b3; /* Color de fondo al pasar el mouse */
+}
+
+.author {
+    font-size: 12px; /* Tamaño de fuente para el autor */
+    color: #666; /* Color gris para el texto del autor */
+    margin-top: 5px; /* Espaciado superior para separar del mensaje */
+    text-align: right; /* Alinear el texto del autor a la derecha */
+    display: block; /* Hacer que el span ocupe toda la línea */
 }
